fixes to qualifier spacing and chart archive CSS

--- a/meteor/client/stylesheets/partials/_chart-archive.scss
+++ b/meteor/client/stylesheets/partials/_chart-archive.scss
@@ -97,6 +97,7 @@
 .charts-archive_single {
   @include span-columns(8 of 24);
   margin-bottom: 10px;
+  height: 230px;
   position: relative;
   cursor: pointer;
   overflow: hidden;
@@ -106,12 +107,14 @@
   }
   img {
     display: block;
-    width: 100%;
     padding: 8px;
+    width: 100%;
   }
   h4 {
     padding: 8px 8px 5px 8px;
     @include interface-font-regular;
+    background-color: $color-white;
+    z-index: 100;
   }
   &:nth-of-type(3n) {
     margin-right: 0;
@@ -127,15 +130,25 @@
 .charts-archive_single-inner {
   width: 100%;
   border: 1px solid #e4e4e4;
+  display: block;
+  position: relative;
+  height: 100%;
 }
 
 .empty-image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  display: block;
+  height: 100%;
+  z-index: -100;
   background: $color-gray-light;
   padding: 1em;
   p {
     text-align: center;
+    position: relative;
+    top: 45%;
+    transform: translateY(-50%);
   }
 }
 
